[project]
name = "aisep15"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ag2[ollama,openai]>=0.9.9",
    "agent>=0.1.3",
    "autogen>=0.9.9",
    "autogen-core>=0.7.4",
    "docx>=0.2.4",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-llama>=0.1.1",
    "langgraph>=0.6.7",
    "pydantic>=2.11.9",
    "pylance>=0.36.0",
    "python-docx>=1.2.0",
]
